# azure-voicelive-sip-python

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: deployment-scenarios.md  pjsua-integration-plan.md
src/voicelive_sip_gateway/: __init__.py
src/voicelive_sip_gateway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/voicelive_sip_gateway/config/: __init__.py  settings.py
src/voicelive_sip_gateway/gateway/: main.py
src/voicelive_sip_gateway/logging/: __init__.py  setup.py
src/voicelive_sip_gateway/media/: __init__.py  stream_bridge.py  transcode.py
src/voicelive_sip_gateway/sip/: __init__.py  agent.py  rtp.py  sdp.py
src/voicelive_sip_gateway/voicelive/: __init__.py  client.py  events.py  tools.py
tests/unit/: test_settings.py  test_transcode.py
